[gd_scene load_steps=3 format=2]

[ext_resource path="res://health.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[node name="health" type="Node2D"]
script = ExtResource( 1 )

[node name="bot1" type="Sprite" parent="."]
position = Vector2( 215, 234 )
texture = ExtResource( 2 )

[node name="bot2" type="Sprite" parent="."]
position = Vector2( 826, 228 )
texture = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_left = 145.0
margin_top = 416.0
margin_right = 268.0
margin_bottom = 481.0
text = "resposta 2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 526.0
margin_top = -1.0
margin_right = 1008.0
margin_bottom = 33.0
text = "barra de vida 2"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar" type="ProgressBar" parent="."]
margin_left = 3.0
margin_top = 31.0
margin_right = 495.0
margin_bottom = 111.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 149.0
margin_top = 334.0
margin_right = 269.0
margin_bottom = 397.0
text = "resposta 1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressBar2" type="ProgressBar" parent="."]
margin_left = 523.0
margin_top = 30.0
margin_right = 1010.0
margin_bottom = 111.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="Button" parent="."]
margin_left = 146.0
margin_top = 497.0
margin_right = 268.0
margin_bottom = 559.0
text = "resposta 3"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 9.0
margin_top = 5.0
margin_right = 493.0
margin_bottom = 31.0
text = "barra de vida 1"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 280.0
margin_top = 130.0
margin_right = 742.0
margin_bottom = 228.0
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="changed" from="ProgressBar" to="." method="_on_ProgressBar_changed"]
[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_Button3_pressed"]
